[tool.poetry]
name = "decotree-backend"
version = "0.1.0"
description = ""
authors = ["yunjae <miraedbswo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
uvicorn = "^0.20.0"
starlette = "^0.22.0"
ujson = "^5.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
